--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile project(':libs:GuillotineMenu-Android-master:library')
     compile 'com.baoyz.pullrefreshlayout:library:1.0.1'
     compile 'com.github.traex.expandablelayout:library:1.3'
+    compile 'com.pubnub:pubnub:3.7.3'
 }
